<resources>
    <string name="Bottom_microphone_recording">Bottom microphone recording</string>
    <string name="Failed_to_write_tag">Failed to write to Voice Label</string>
    <string name="No_bookmarks">No bookmarks</string>
    <string name="No_bookmarks_description">The bookmarks you add will appear here.</string>
    <string name="Tag_has_been_written_successfully">Voice Label written.</string>
    <string name="Top_microphone_recording">Top microphone recording</string>
    <string name="a_call_missed_record">You can see the blocked call in your call history.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_voice_recorder">About Voice Recorder</string>
    <string name="action_contact_us">Contact us</string>
    <string name="action_settings">Settings</string>
    <string name="activation_nfc_failed">Activating NFC failed</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="add_category_button">Add</string>
    <string name="add_note">Add</string>
    <string name="addnewlabel">Add category</string>
    <string name="agree">Agree</string>
    <string name="all">All</string>
    <string name="allow">Allow</string>
    <string name="an_sd_card_is_full">There isn\'t enough space to save this recording in your SD card. Save it to your internal storage to keep recording.</string>
    <string name="app_info">App info</string>
    <string name="app_name">Voice Recorder</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ascending">Ascending</string>
    <string name="ble_action_record_pause">Record/pause</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_full">The maximum number of voice bookmarks (%d) has been reached.</string>
    <string name="bookmark_list">Bookmark list</string>
    <string name="bookmark_list_item_hint">Enter memo</string>
    <string name="bookmark_text_edit">Add note</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="build_in_mic">Build-in mic</string>
    <string name="button">Button</string>
    <string name="button_tts">Button</string>
    <string name="call_accept_info">The voice recording will be saved automatically when you accept the call.</string>
    <string name="call_reject_recording">Call reject while recordings</string>
    <string name="calls_rejected">Blocking calls</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_recording_message">Recording will be stopped and the file will not be saved.</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="category_call_history">Call history</string>
    <string name="category_interview">Interview</string>
    <string name="category_name_already_exists">There\'s already a category with that name.</string>
    <string name="category_none">None</string>
    <string name="category_speech_to_text">Speech to text</string>
    <string name="change_storage_location">Change storage location</string>
    <string name="change_storage_location_body">You can save space in your phone\'s internal storage by saving recordings to your SD card.</string>
    <string name="change_storage_location_body_tablet">You can save space in your tablet\'s internal storage by saving recordings to your SD card.</string>
    <string name="change_storage_location_title">Save recordings to your SD card?</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_update_fail">Can\'t check for updates. Your phone isn\'t connected to a network.</string>
    <string name="chip_text">Chip text</string>
    <string name="copy">Copy</string>
    <string name="custom_actions_tts">Custom actions</string>
    <string name="delete">Delete</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="delete_categories_item">The recordings in this category won\'t be deleted.</string>
    <string name="delete_categories_items">The recordings in these categories won\'t be deleted.</string>
    <string name="delete_dimmed_area">Delete dimmed area</string>
    <string name="delete_failed">Delete failed</string>
    <string name="delete_item">Delete 1 recording?</string>
    <string name="delete_items">Delete %d recordings?</string>
    <string name="delete_nfc_item">You will no longer be able to play this audio file using Voice Label once it is deleted.</string>
    <string name="delete_nfc_items">You will no longer be able to play these audio file using Voice Label once they are deleted.</string>
    <string name="delete_selected_area">Delete selected area</string>
    <string name="delete_voice_label_file">1 of %d recordings has been written to a Voice Label. You will no longer be able to play this recording using that Voice Label after it has been deleted.</string>
    <string name="delete_voice_label_files">%1$d of %2$d recordings have been written to Voice Labels. You will no longer be able to play these recordings using these Voice Labels after they have been deleted.</string>
    <string name="deleting_recording">Deleting recording...</string>
    <string name="deleting_recordings">Deleting recordings...</string>
    <string name="deny">Deny</string>
    <string name="descending">Descending</string>
    <string name="details">Details</string>
    <string name="device">Device</string>
    <string name="discard">Discard</string>
    <string name="discard_changes">Save your changes or discard them?</string>
    <string name="done">Done</string>
    <string name="drag_with_two_fingers_to_trim">Drag with two fingers to edit</string>
    <string name="dragndroplist_drag_release">Item dropped into position %d.</string>
    <string name="dragndroplist_drag_start">Started dragging item at position %d.</string>
    <string name="dragndroplist_item_cannot_be_dragged">Item at position %d cannot be dragged.</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="edit_button">Edit</string>
    <string name="edit_title">Save edited recording</string>
    <string name="end_point_repeating_section_tts">End point of repeating section</string>
    <string name="enter_new_text">Enter new text</string>
    <string name="event_STT_help">1011</string>
    <string name="event_about">1407</string>
    <string name="event_about_page_back">1409</string>
    <string name="event_add_category">1239</string>
    <string name="event_add_category_cancel">1905</string>
    <string name="event_add_category_save">1906</string>
    <string name="event_back">1101</string>
    <string name="event_block_call">1405</string>
    <string name="event_bookmark">1102</string>
    <string name="event_bookmark_cancel">1929</string>
    <string name="event_bookmark_done">1930</string>
    <string name="event_bottom_voice">1320</string>
    <string name="event_call_history_category">1220</string>
    <string name="event_call_history_popup_cancel">1925</string>
    <string name="event_call_history_popup_history">1926</string>
    <string name="event_category_del">1235</string>
    <string name="event_category_rename">1234</string>
    <string name="event_category_reorder">1236</string>
    <string name="event_category_select_all">1233</string>
    <string name="event_contact_us">1009</string>
    <string name="event_convert_language">1403</string>
    <string name="event_convert_pause">1406</string>
    <string name="event_convert_progress_back">1405</string>
    <string name="event_convert_resume">1407</string>
    <string name="event_convert_seek_wave">1402</string>
    <string name="event_convert_start">1404</string>
    <string name="event_convert_stop">1408</string>
    <string name="event_del_dimmed_area">1333</string>
    <string name="event_del_on_list">1213</string>
    <string name="event_del_selected_area">1332</string>
    <string name="event_details_on_list">1216</string>
    <string name="event_discard_popup_cancel">1910</string>
    <string name="event_discard_popup_discard">1911</string>
    <string name="event_discard_popup_save">1912</string>
    <string name="event_edit">1207</string>
    <string name="event_edit_back">1322</string>
    <string name="event_edit_change_bkm_list_to_wave">1341</string>
    <string name="import_from_app">Import from app</string>
    <string name="last_modified_time">Last modified</string>
    <string name="manage_categories">Manage categories</string>
    <string name="move">Move</string>
    <string name="move_out_of_secure_folder">Move out of Secure Folder</string>
    <string name="move_to_secure_folder">Move to Secure Folder</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="on">On</string>
    <string name="order">Order</string>
    <string name="path">Path</string>
    <string name="play_continuously">Play continuously</string>
    <string name="play_through_receiver">Play with Receiver</string>
    <string name="play_through_speaker">Play with Speaker</string>
    <string name="recording_format_channel">Channel</string>
    <string name="recording_format_encoding_rate">Bit rate</string>
    <string name="recording_format_sampling_rate">Sampling rate</string>
    <string name="recording_quality">Recording quality</string>
    <string name="recording_stereo">Record audio in stereo</string>
    <string name="rename">Rename</string>
    <string name="search">Search</string>
    <string name="sharevia">Share</string>
    <string name="size">Size</string>
    <string name="sort_by">Sort</string>
    <string name="storage_location">Storage location</string>
    <string name="stt_translate_menu">Convert speech to text</string>
    <string name="time">Time</string>
    <string name="trash">Trash</string>
</resources>