<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@+id/option_rename" android:title="@string/rename"/>
    <item android:id="@+id/option_delete" android:title="@string/delete"/>
    <item android:id="@+id/option_share" android:title="@string/sharevia"/>
    <item android:id="@+id/option_move" android:title="@string/move"/>
    <item android:id="@+id/option_move_to_secure_folder" android:title="@string/move_to_secure_folder"/>
    <item android:id="@+id/option_remove_from_secure_folder" android:title="@string/move_out_of_secure_folder"/>
    <item android:id="@+id/option_details" android:title="@string/details"/>
</menu>
