<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/voice_rec_bottom_bar_ic_move" android:id="@+id/action_move" android:title="@string/move" android:contentDescription="@string/move" android:iconTint="@color/bottom_menu_icon_color"/>
    <item android:icon="@drawable/voice_rec_bottom_bar_ic_rename" android:id="@+id/action_rename" android:title="@string/rename" android:contentDescription="@string/rename" android:iconTint="@color/bottom_menu_icon_color"/>
    <item android:icon="@drawable/voice_rec_bottom_bar_ic_share" android:id="@+id/action_share" android:title="@string/sharevia" android:contentDescription="@string/sharevia" android:iconTint="@color/bottom_menu_icon_color"/>
    <item android:icon="@drawable/voice_rec_bottom_bar_ic_delete" android:id="@+id/action_delete" android:title="@string/delete" android:contentDescription="@string/delete" android:iconTint="@color/bottom_menu_icon_color"/>
</menu>
