<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:paddingTop="@dimen/details_parent_margin_top" android:paddingBottom="@dimen/details_parent_margin_bottom" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/details_item_height" android:paddingHorizontal="@dimen/details_padding_horizontal">
            <TextView android:textSize="@dimen/details_item_title_text_size" android:textColor="@color/details_title" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/details_first_item_margin_top" android:text="@string/name" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_content_text_size" android:textColor="@color/details_content" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/details_name_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_title_text_size" android:textColor="@color/details_title" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/details_below_item_margin_top" android:text="@string/size" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_content_text_size" android:textColor="@color/details_content" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/details_size_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_title_text_size" android:textColor="@color/details_title" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/details_below_item_margin_top" android:text="@string/duration" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_content_text_size" android:textColor="@color/details_content" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/details_duration_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_title_text_size" android:textColor="@color/details_title" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/details_below_item_margin_top" android:text="@string/last_modified_time" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_content_text_size" android:textColor="@color/details_content" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/details_date_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_title_text_size" android:textColor="@color/details_title" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/details_below_item_margin_top" android:text="@string/recording_format_channel" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_content_text_size" android:textColor="@color/details_content" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/details_channel_content" android:paddingBottom="2dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_title_text_size" android:textColor="@color/details_title" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/details_below_item_margin_top" android:text="@string/recording_format_encoding_rate" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_content_text_size" android:textColor="@color/details_content" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/details_bit_rate_content" android:paddingBottom="2dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_title_text_size" android:textColor="@color/details_title" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/details_below_item_margin_top" android:text="@string/recording_format_sampling_rate" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_content_text_size" android:textColor="@color/details_content" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/details_sampling_rate_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_title_text_size" android:textColor="@color/details_title" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/details_below_item_margin_top" android:text="@string/path" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
            <TextView android:textSize="@dimen/details_item_content_text_size" android:textColor="@color/details_content" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/details_path_content" android:paddingBottom="@dimen/details_first_item_margin_top" android:layout_width="match_parent" android:layout_height="wrap_content" android:includeFontPadding="true" android:fontFamily="sec-roboto-light" android:textAlignment="viewStart"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
